# mcp-arr

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
arr_suite_mcp/: __init__.py  config.py  healthcheck.py  server.py
arr_suite_mcp/clients/: __init__.py  base.py  prowlarr.py  radarr.py  sonarr.py
deploy/portainer/: docker-compose.yml
docker/: Dockerfile  docker-entrypoint.sh
tests/: test_intent_router.py  test_prowlarr_client.py  test_server.py
